src/objects/srpFieldHistoryInfo__c.object
<CustomObject>
    <fields>
        <fullName>asyncId__c</fullName>
        <label>Async Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordCount__c</fullName>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>recordId__c</fullName>
        <label>Record Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObjectName__c</fullName>
        <label>SObject Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>whereClause__c</fullName>
        <label>Where Clause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>SRP Field History Info</label>
    <nameField>
        <displayFormat>HI-{0000000000}</displayFormat>
        <label>SRP Field History Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SRP Field History Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>